# TauriTavern

./: ExtensionDEV.md  package.json
.github/workflows/: mobile-auto-prerelease.yml
default/content/: index.json
docs/: FrontendGuide.md  FrontendHostContract.md  README.md
docs/API/: Chat.md  Migration.md  README.md
docs/CurrentState/: MemoryExtensionApi.md  MobileStyleAdaptation.md  README.md
src/: index.html  login.html  manifest.json  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/application/dto/: character_dto.rs  settings_dto.rs
src-tauri/src/application/services/: character_service.rs  chat_service.rs  settings_service.rs
src-tauri/src/application/services/character_service/: lorebook_codec.rs
src-tauri/src/domain/models/: settings.rs
src-tauri/src/domain/repositories/: character_repository.rs  chat_repository.rs
src-tauri/src/infrastructure/repositories/file_character_repository/: helpers.rs  repository.rs
src-tauri/src/infrastructure/repositories/file_chat_repository/: extension_metadata.rs  extension_store.rs  locate.rs  message_search.rs  mod.rs  repository_impl.rs  summary.rs  tests.rs
src-tauri/src/presentation/: mod.rs  windows_tray.rs
src-tauri/src/presentation/commands/: bridge.rs  character_commands.rs  chat_api_commands.rs  mod.rs  registry.rs  settings_commands.rs
src/css/: mobile-styles.css
src/locales/: zh-cn.json  zh-tw.json
src/scripts/tauri/setting/: setting-panel.js
src/tauri/main/: bootstrap.js
src/tauri/main/adapters/st/: active-chat-ref.js
src/tauri/main/api/: chat-search-messages.js  chat.js
src/tauri/main/compat/mobile/: android-ime-layout-host.js
src/tauri/main/context/: index.js  types.js
src/tauri/main/kernel/invokes/: tauri-commands.js
src/tauri/main/routes/: ai-routes.js  character-routes.js
src/tauri/main/services/ai/: generation-lifecycle-service.js  generation-status-bridge.js
src/tauri/main/services/characters/: character-form-service.js  character-service.js
src/tauri/main/services/notifications/: system-notification-service.js
