[package]
name = "tauritavern"
version = "1.5.3"
description = "SillyTavern backend rebuilt with Tauri and Rust"
authors = ["TauriTavern Team"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauritavern_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }
serde_json = "1"

[dependencies]
tauri = { version = "2.10.2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-barcode-scanner = "2.4.4"
tauri-plugin-opener = "2.5.3"
tauri-plugin-fs = "2.4.5"
tauri-plugin-notification = "2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "env-filter", "fmt", "std"] }
tracing-appender = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
tokio = { version = "1", default-features = false, features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", default-features = false, features = ["io"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "rustls"] }
bytes = "1"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
rand = "0.9"
uuid = { version = "1.4", default-features = false, features = ["serde", "std", "v4"] }
async-trait = "0.1"
url = "2.4"
percent-encoding = "2"
zip = { version = "8", default-features = false, features = ["deflate-flate2-zlib-rs"] }
image = { version = "0.24", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "webp"] }
png = "0.17"
mime_guess = "2.0.5"
flate2 = "1.1.9"
filetime = "0.2"
miktik = { version = "0.2.0", default-features = false, features = ["openai", "huggingface", "sentencepiece"] }
axum = { version = "0.7", default-features = false, features = ["http1", "json", "multipart", "tokio"] }
local-ip-address = "0.6"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }

[target.'cfg(target_os = "android")'.dependencies]
rustls = { version = "0.23", default-features = false, features = ["std"] }
webpki-roots = "1"

[target.'cfg(target_os = "ios")'.dependencies]
objc2 = "0.6.4"
block2 = "0.6.2"
objc2-uniform-type-identifiers = { version = "0.3.2", default-features = false, features = ["std", "UTType"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["std", "NSArray", "NSError", "NSFileManager", "NSString", "NSURL"] }
objc2-ui-kit = { version = "0.3.2", default-features = false, features = ["std", "block2", "objc2-core-foundation", "objc2-uniform-type-identifiers", "UIActivity", "UIActivityViewController", "UIDocumentPickerViewController", "UIPopoverPresentationController", "UIPresentationController", "UIResponder", "UIScrollView", "UIView", "UIViewController", "UIWindow", "UIGeometry"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
portable = []

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = "symbols"
